--- a/reactomon/src/index.css
+++ b/reactomon/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
+
+.nav-wrapper{
+  padding: 0 120px;
+}
+.logo{
+  width: 125px;
+  align-items: baseline;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.menue{
+  font-size: 18px;
+  font-family: 'RocknRoll One', sans-serif;
 }
