--- a/reactomon/src/index.css
+++ b/reactomon/src/index.css
@@ -9,6 +9,53 @@
 }
 
 .menue{
-  font-size: 18px;
+  text-transform: capitalize  ;
+  font-size: 20px;
+  font-weight: bolder;
   font-family: 'RocknRoll One', sans-serif;
+  -webkit-text-stroke: 1.2px #4F577C;
+  -webkit-text-fill-color:  #FDBF0C; /* Will override color (regardless of order) */
+  text-shadow:
+      3px 3px 0 #4F577C,
+    -1px -1px 0 #4F577C,  
+     1px -1px 0 #4F577C,
+     -1px 1px 0#4F577C,
+      1px 1px 0 #4F577C;
 }
+.home img{
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+	
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+}
+.btn{
+  margin: 400px 0 0 200px;
+  
+}
+.click{
+  margin-right: 150px;
+  background-color: #FDBF0C;
+  border: solid 3px #4F577C ;
+  border-radius: 7px;
+  font-family: 'RocknRoll One', sans-serif;
+  font-weight: bold;
+  -webkit-text-stroke: 1.2px #4F577C;
+  -webkit-text-fill-color:  #FDBF0C; /* Will override color (regardless of order) */
+  text-shadow:
+      3px 3px 0 #4F577C,
+    -1px -1px 0 #4F577C,  
+     1px -1px 0 #4F577C,
+     -1px 1px 0#4F577C,
+      1px 1px 0 #4F577C;
+
+}
+
+.click:hover{
+  background-color:#D70400 ;
+  -webkit-text-fill-color:  white; /* Will override color (regardless of order) */
+}
+
+
